@@ -19,9 +19,11 @@ void logBirth( int inPlayerID, char *inPlayerEmail,
                int inParentChainLength );
 
 
+// inName can be NULL if player has no name
 // killer email NULL if died of natural causes
 void logDeath( int inPlayerID, char *inPlayerEmail,
                char inEve,
+               char *inName,
                double inAge,
                int inSecPlayed,
                char inIsMale,
